0.723 (05.07.2006) - John Siracusa <siracusa@mindspring.com>

    * Fixed a bug that caused Rose::DB::Object::Cached objects
      to stay in the cache after being delete()d.
    * Added clone() and clone_and_reset() Helper methods.
    * Simplified object destruction, delegating all database object
      clean up to Rose::DB.

0.722 (04.27.2006) - John Siracusa <siracusa@mindspring.com>

    * Really remove Clone::PP this time...

0.721 (04.27.2006) - John Siracusa <siracusa@mindspring.com>

    * Improved and documented metadata inheritance behavior.

0.72 (04.19.2006) - John Siracusa <siracusa@mindspring.com>

    * Many reference-count bugs fixed, including several that could cause 
      database handles to leak.
    * Fixed a bug that could cause "empty" sub-objects to be created when
      processing certain with_objects parameters.
    * Improved the accessor/mutator methods for these column types: set, 
      array, and boolean.
    * Changed the BigInt and BigSerial column classes to use normal Perl
      scalars instead of Math::BigInt objects when perl has been compiled 
      to use native 64-bit integers.  (Suggested by Jesse Brown)
    * Added the inject_results Manager parameter to bypass the standard
      object creation mechanism in cases where it's the dominant factor
      in overall performance.

0.71 (04.14.2006) - John Siracusa <siracusa@mindspring.com>

    * Correctly clear the "in the database" state flag when a 
      speculative load fails because the object was not found.
      (Reported indirectly by Svilen Ivanov)
    * Changed how multi-table queries are formulated for SQLite in 
      order to make the new DBD::SQLite version (1.12) happy.
    * Fixed errors in the epoch column documentation.
    * Fixed some internal method-maker bugs.

0.701 (04.05.2006) - John Siracusa <siracusa@mindspring.com>

    * Removed stray "._*" files from module distribution.

0.70 (04.04.2006) - John Siracusa <siracusa@mindspring.com>
